--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                 </svg></button>
 
             <h1 class="city_name">Biratnagar</h1>
-            <img id="weather_img" class="cloud_sun" src="/images/cloud-sun.png">
+            <img id="weather_img" class="cloud_sun" src="cloud-sun.png">
             <h2 class="city_temp">26°C</h2>
 
             <h4 class="img_under">humidity</h4>
-            <img class="humidity_img" src="/images/humidity.png">
+            <img class="humidity_img" src="humidity.png">
             <h2 class="city_humidity">10 %</h2>
 
             <h4 class="img_under1">wind speed</h4>
-            <img class="feels_like" src="/images/wind.png">
+            <img class="feels_like" src="wind.png">
             <h2 class="city_feel">27km/hr</h2>
 
         </div>
